# claude

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ai-agents-investigation.md  app.js  gbrain-investigation.md  index.html  openhuman-investigation.md  pyproject.toml  render.yaml  requirements.txt  style.css
.claude/skills/mobile-shorts-edit/: SKILL.md
.claude/skills/mobile-video-edit/: SKILL.md
.github/workflows/: pages.yml
app/: app.js  index.html  manifest.webmanifest  save.html  style.css  sw.js
assets/: README.md  bgm-manifest.json  se-manifest.json
remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion/src/: Root.tsx  types.ts
remotion/src/components/: BGMTrack.tsx  BRoll.tsx  EndCard.tsx  KaraokeCaption.tsx  SETrack.tsx  TitleCard.tsx  VideoLayer.tsx
remotion/src/compositions/: Shorts.tsx  YouTubeLong.tsx
scripts/: battle_bgm.py  bgm-pick.sh  bgm-synth.sh  cloud.sh  concat.sh  cut.sh  deliver.sh  imgclip.sh  jumpcut.sh  lib.sh  midi_arrange.py  midi_express.py  midi_render_synth.py  music.sh  musicbox_gen.py  se-pick.sh  setup-local.sh  setup-remotion.sh  setup.sh  sf_render.sh  shorts.sh  telop.sh  upload.sh  vertical.sh  whisper.sh
server/: .env.example  README.md  package-lock.json  package.json  server.js
server/lib/: planner.js  runPlan.js
src/aistockadvisor/: __init__.py  __main__.py  exceptions.py
src/aistockadvisor/ai/: __init__.py  (+4 more)
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/unit/: test_models.py  test_paper_broker.py  test_risk.py  test_strategy.py
(+31 files in other folders)
