[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aistockadvisor"
version = "0.1.0"
description = "AI-powered stock investment tool with broker API integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "yfinance>=0.2.36,<1",
    "httpx>=0.27,<1",
    "alpaca-py>=0.21,<1",
    "openai>=1.30,<2",
    "anthropic>=0.34,<1",
    "typer[all]>=0.12,<1",
    "rich>=13.7,<14",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
aisa = "aistockadvisor.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aistockadvisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
